# ex-bh-k2hkfd

case_study_1/: .gitignore  README.md  main.py  pyproject.toml
case_study_1/data/: prompts.json
case_study_2/: README.md  generate_synthetic_data.py  main.py  pyproject.toml
case_study_2/tests/: test_features.py
case_study_3/: CLAUDE.md  README.md  main.py  pyproject.toml  response4.json
case_study_3/data/: batch2.json  chat1.json  compare3.json  improve4.json  response1.json  response2.json  response3.json
