[project]
name = "py3-blooming-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "fastapi[standard]>=0.133.1",
    "jupyterlab>=4.5.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
