[project]
name = "case-study-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "jupyterlab>=4.5.5",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
